<resources>
    <string name="app_name">云日程</string>
    <string name="title_calendar">日历</string>
    <string name="title_time_class">课程表</string>
    <string name="title_daka">打卡</string>
    <string name="title_user">我</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="First">一</string>
    <string name="Second">二</string>
    <string name="Third">三</string>
    <string name="Fourth">四</string>
    <string name="Fifth">五</string>
    <string name="Sixth">六</string>
    <string name="Seventh">七</string>
    <string name="Eighth">八</string>
    <string name="Ninth">九</string>
    <string name="Tenth">十</string>
    <string name="Eleventh">十一</string>
    <string name="Twelfth">十二</string>
    <string name="Thirteenth">十三</string>
    <string name="Userinf">个人信息</string>
    <string name="feedback">意见反馈</string>
    <string name="AllRightsReserved">版权声明</string>
    <string name="test">测试</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="userPicture">用户头像</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="if_empty">这里还没有数据哦！</string>
    <string name="add_dayEvent">添加日程</string>
    <string name="add_dayEventTime">设置时间</string>
    <string name="save">保存</string>
    <string name="dakaeventListBtn">打卡计时</string>
    <string name="SqyL">开发者：三千樱落</string>
    <string name="pictureLook">查看头像</string>
    <string name="pictureChange">更换头像</string>
    <string name="title_activity_user_information">个人信息</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="add_daka">添加打卡项</string>
    <string name="title_activity_user_picture">头像更改</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="add_day_event">添加日程</string>
    <string name="add_class">添加课程</string>
    <string name="class_week">节/周</string>
    <string name="day_event_name_input">添加日程</string>
    <string name="day_event_time_input">设置时间：</string>
    <string name="btn_save_day_event">保存</string>
    <string name="class_event_name_input">输入课程</string>
    <string name="class_event_time_input">节数</string>
    <string name="Bolangxian">~</string>
    <string name="class_event_teacher_input">教师</string>
    <string name="class_event_classroom_input">教室</string>
    <string name="daka_event_type_input">选择类型</string>
    <string name="daka_event_type">选择打卡项类型</string>
    <string name="daka_event_name_input">打卡项名称</string>
    <string name="daka_event_days_input">需打卡天数</string>
    <string name="class_dayOfWeek">选择课程日期</string>
    <string name="class_event_dayOfWeek_input">选择日期</string>
    <string name="input_feedback">请输入您要反馈的内容：</string>
    <string name="submit_feedback">提交</string>
    <string name="selectFromDCIM">从相册中选取</string>
    <string name="UseCamera">拍照</string>
    <string name="GiveUp">取消</string>
    <string name="WhatIsaid1">本作品仅用于河北工业大学2021年毕业设计</string>
    <string name="WhatIsaid2">目前发布的“云日程”APP为单机测试版本，非本毕业设计最终版本。最终版本将在2021/7/1后在GitHub进行开源。</string>
    <string name="Allrightsreserved">©2021 Sqyl. All rights reserved.</string>
    <string name="mole">懒得写，摸了</string>
    <string name="Timer_title">计时器</string>
    <string name="timer_begin">开始</string>
    <string name="timer_pause">暂停</string>
    <string name="timer_continue">重置</string>
    <string name="login">登录</string>
    <string name="password">输入密码</string>
    <string name="account">输入用户名</string>
    <string name="register">注册</string>
    <string name="username">输入姓名</string>
    <string name="gotoLogin">前往登录</string>
    <string name="userAccount_show">账号</string>
    <string name="userPassword_show">密码</string>
    <string name="userName_show">姓名</string>
    <string name="logout">登出</string>
    <string name="update_day_event">修改日程</string>
    <string name="day_event_name_update">更改日程名</string>
    <string name="update_class">修改课程</string>
    <string name="set_daka_msg">打卡心情</string>
    <string name="record_daka">记录下打卡的心情吧</string>
    <string name="friends">好友</string>
    <string name="friendList">好友列表</string>
    <string name="title_add_friends">添加好友</string>
    <string name="input_friend">请输入好友ID</string>
    <string name="show_daka">好友打卡项</string>

</resources>