<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calendar">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.YunDays.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_time_class"
        android:name="com.example.YunDays.ui.time_class.timeClassFragment"
        android:label="@string/title_time_class"
        tools:layout="@layout/fragment_time_class" />

    <fragment
        android:id="@+id/navigation_daka"
        android:name="com.example.YunDays.ui.daka.DakaFragment"
        android:label="@string/title_daka"
        tools:layout="@layout/fragment_daka" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.YunDays.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>