<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <!--工具条-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="40dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/title_time_class"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
                <ImageView
                    android:id="@+id/classEvent_add"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:padding="7dp"
                    android:src="@drawable/ic_baseline_add_24"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/text_class_Monday"
                android:text="@string/Monday"
                android:gravity="center"
                android:textSize="18sp"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/text_class_Tuesday"
                android:text="@string/Tuesday"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/text_class_Wednesday"
                android:text="@string/Wednesday"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/text_class_Thursday"
                android:text="@string/Thursday"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/text_class_Friday"
                android:text="@string/Friday"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/text_class_Saturday"
                android:text="@string/Saturday"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/text_class_Sunday"
                android:text="@string/Sunday"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
        <include
            android:id="@+id/if_empty_class"
            layout="@layout/listview_empty" />

        <ListView
            android:id="@+id/classList"
            android:layout_width="match_parent"
            android:layout_height="675dp"
            android:paddingBottom="?attr/actionBarSize"/>
    </LinearLayout>
</ScrollView>