<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/azure">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="45sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <TextView
            android:text="@string/register"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/register_account"
            android:layout_width="match_parent"
            android:hint="@string/account"
            android:inputType="text"
            android:layout_marginHorizontal="32dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:inputType="text"
            android:layout_marginHorizontal="32dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_marginHorizontal="32dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_gotoLogin"
                android:text="@string/gotoLogin"
                android:layout_width="0dp"
                android:textSize="22sp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="48dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btn_register_submit"
                android:text="@string/register"
                android:textSize="22sp"
                android:layout_width="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="48dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </LinearLayout>

</LinearLayout>