<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        app:title="@string/AllRightsReserved"
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:text="@string/WhatIsaid1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
        <TextView
            android:text="@string/WhatIsaid2"
            android:textStyle="bold"
            android:textSize="24dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />
        <TextView
            android:text="@string/Allrightsreserved"
            android:textStyle="bold"
            android:textSize="24dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>