<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    android:padding="16dp"
    android:paddingBottom="30dp"
    android:paddingTop="30dp"
    android:id="@+id/dayevent_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_dayEvent"
        android:textSize="18sp"
        android:paddingBottom="15dp"/>
    <EditText
        android:id="@+id/dayEvent_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="日程名"
        android:minHeight="45dp"
        android:textSize="18sp"
        android:paddingBottom="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_dayEventTime"
        android:textSize="18sp"
        android:paddingBottom="15dp"/>
    <EditText
        android:id="@+id/dayEvent_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="时间"
        android:minHeight="45dp"
        android:textSize="18sp"
        android:paddingBottom="15dp"/>
    <Button
        android:id="@+id/dayevent_dialog_btn"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:paddingTop="50dp"
        android:text="@string/save" />


</LinearLayout>