<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        app:title="@string/title_add_friends"
        android:id="@+id/toolbar_addFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/input_friend"
            android:textSize="28sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/add_friend_id"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="number" />
        <Button
            android:layout_marginVertical="32dp"
            android:layout_marginLeft="220dp"
            android:text="@string/submit_feedback"
            android:id="@+id/btn_add_friend"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>