<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/userImg_mohu"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImg_circle"
            android:layout_gravity="center"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:src="@mipmap/ic_user_img_chtholly"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/black"/>
    </FrameLayout>

    <TextView
        android:id="@+id/text_userName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/SqyL"
        android:gravity="center"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/text_userInformation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/Userinf"
        android:textSize="26sp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/textview_border"/>
    <TextView
        android:id="@+id/text_feedback"
        android:text="@string/feedback"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="26sp"
        android:gravity="center_vertical"
        android:layout_marginLeft="40dp"
        android:background="@drawable/textview_border"/>
    <TextView
        android:id="@+id/text_settings"
        android:text="@string/AllRightsReserved"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="26sp"
        android:gravity="center_vertical"
        android:layout_marginLeft="40dp"
        android:background="@drawable/textview_border"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>