<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_update_class"
        app:title="@string/update_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:text="@string/class_event_dayOfWeek_input"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:textSize="24sp"
                android:layout_weight="1" />
            <Spinner
                android:id="@+id/update_class_dayOfWeek_spinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:entries="@array/dayOfWeek"
                android:prompt="@string/class_dayOfWeek" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/class_event_name_input"
                android:textSize="28dp"/>
            <EditText
                android:id="@+id/update_class_event_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/class_event_time_input"
                android:textSize="28dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/update_class_event_begin"
                    android:inputType="number"
                    android:layout_width="0dp"
                    android:maxLength="1"
                    android:layout_weight="1"
                    android:layout_height="45dp" />
                <TextView
                    android:layout_width="0dp"
                    android:text="@string/Bolangxian"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:layout_height="match_parent" />
                <EditText
                    android:id="@+id/update_class_event_end"
                    android:inputType="number"
                    android:maxLength="2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="45dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/class_event_teacher_input"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="28dp"
                    android:layout_height="match_parent" />
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>
                <TextView
                    android:text="@string/class_event_classroom_input"
                    android:layout_width="0dp"
                    android:textSize="28dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/update_class_event_teacher"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_height="match_parent" />
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>
                <EditText
                    android:id="@+id/update_class_event_classroom"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="text" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/btn_update_class_event"
                    android:text="@string/btn_save_day_event"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>