<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        app:title="@string/title_activity_user_information"
        android:id="@+id/toolbar_userInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:text="@string/userAccount_show"
                android:textSize="26sp"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/userAccount_show"
                android:layout_width="0dp"
                android:textSize="26sp"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:text="@string/userPassword_show"
                android:textSize="26sp"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/userPassword_show"
                android:layout_width="0dp"
                android:layout_height="105dp"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:textSize="26sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:text="@string/userName_show"
                android:textSize="26sp"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/userName_show"
                android:layout_width="0dp"
                android:textSize="26sp"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_logout"
            android:text="@string/logout"
            android:textSize="26sp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>