<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_setDakaMsg"
        app:title="@string/set_daka_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <TextView
            android:text="@string/record_daka"
            android:textSize="28sp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/record_dakamsg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <Button
                android:text="@string/submit_feedback"
                android:textSize="24sp"
                android:id="@+id/btn_record_dakamsg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="32dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>